refactor styles (doesn't preserve quiz style, fix before merging)

--- a/website/course_content.html
+++ b/website/course_content.html
@@ -5,183 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Literacy Course - Keybinds Lesson</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <script src="./imports/loadImports.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
-    <style>
-        /* Reset some default styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Body Styling */
-        body {
-            font-family: 'Roboto', sans-serif;
-            line-height: 1.6;
-            background-color: #f4f4f9;
-            color: #333;
-            padding-top: 70px; /* Adjust to match header height */
-        }
-
-        /* Header Styling */
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: #ffffff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 20px;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        nav button {
-            background: none;
-            border: none;
-            font-size: 1.2rem;
-            cursor: pointer;
-            margin-left: 10px;
-            transition: color 0.3s;
-        }
-
-        nav button:hover {
-            color: #007BFF;
-        }
-
-        /* Container */
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Headings */
-        h1, h2 {
-            margin-bottom: 15px;
-            color: #007BFF;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        h2 {
-            font-size: 1.8rem;
-            margin-top: 25px;
-        }
-
-        /* Paragraphs */
-        p {
-            margin-bottom: 15px;
-            font-size: 1rem;
-        }
-
-        /* Lists */
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
-            margin-bottom: 15px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        /* Code Styling */
-        code {
-            background-color: #e9ecef;
-            padding: 2px 6px;
-            border-radius: 4px;
-            font-family: 'Courier New', Courier, monospace;
-        }
-
-        /* Image Styling */
-        .list-image {
-            max-width: 100%; /* Ensure image doesn't overflow its container */
-            height: auto; /* Maintain aspect ratio */
-            margin-top: 10px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        /* Quiz Button */
-        .quiz-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-            margin-top: 30px;
-        }
-
-        .quiz-button:hover {
-            background-color: #0056b3;
-        }
-
-        /* Interactive Practice Section Styling */
-        .practice-section {
-            margin-top: 40px;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-
-        .practice-section h2 {
-            color: #28a745; /* Green color for practice sections */
-        }
-
-        .practice-area {
-            width: 100%;
-            min-height: 100px;
-            border: 2px dashed #007BFF;
-            border-radius: 5px;
-            padding: 10px;
-            margin-top: 10px;
-            font-size: 1rem;
-            outline: none;
-            background-color: #f9f9f9;
-        }
-
-        .feedback {
-            margin-top: 10px;
-            font-size: 0.9rem;
-            color: #dc3545; /* Red color for feedback */
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            nav button {
-                font-size: 1rem;
-            }
-
-            .quiz-button {
-                width: 100%;
-                text-align: center;
-            }
-        }
-    </style>
 </head>
 <body>
     <!-- Include the header -->
@@ -280,13 +104,13 @@
         <section id="what-are-some-safety-tips-when-using-keybinds">
             <h2>What are some safety tips when using keybinds?</h2>
             <ul>
-                <li><strong>Avoid repetitive strain:</strong> Take breaks and vary your tasks to prevent strain from repetitive keybind use.</li> <!-- what -->
+                <li><strong>Avoid repetitive strain:</strong> Take breaks and vary your tasks to prevent strain from repetitive keybind use.</li>
                 <li><strong>Be cautious with custom keybinds:</strong> Ensure custom keybinds do not interfere with important system functions.</li>
                 <li><strong>Stay updated:</strong> Keep your software updated to ensure keybinds work correctly and securely.</li>
             </ul>
         </section>
 
-        <a href="quiz1.html" class="quiz-button">Take the Quiz</a>
+        <a href="quiz1.html" class="quiz-button button">Take the Quiz</a>
     </div>
 
     <!-- Include the footer -->
