--- a/website/course_placeholder.html
+++ b/website/course_placeholder.html
@@ -6,90 +6,6 @@
     <title>Digital Literacy Course - Basic Internet Safety</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
-    <style>
-        /* Reset some default styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Body Styling */
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
-            min-height: 100vh;
-            padding-top: 70px; /* Adjust to match header height */
-        }
-
-        /* Header Styling */
-        header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: #ffffff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 20px;
-        }
-
-        .logo img {
-            height: 40px;
-        }
-
-        nav a {
-            text-decoration: none;
-            color: #333;
-            margin-left: 15px;
-            font-size: 1rem;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: #007BFF;
-        }
-
-        /* Main Content Styling */
-        .container {
-            max-width: 800px;
-            margin: 100px auto 40px; /* Top margin accounts for fixed header */
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            text-align: center;
-        }
-
-        .container h1 {
-            color: #28a745;
-            margin-bottom: 20px;
-        }
-
-        .container p {
-            font-size: 1rem;
-            margin-bottom: 20px;
-        }
-
-        .container a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: #ffffff;
-            border: none;
-            border-radius: 5px;
-            text-decoration: none;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
-
-        .container a:hover {
-            background-color: #0056b3;
-        }
-    </style>
 </head>
 <body>
     <!-- Include the header -->
@@ -98,7 +14,7 @@
     <div class="container">
         <h1>Basic Internet Safety</h1>
         <p>This course is under development. Stay tuned for more information!</p>
-        <a href="index.html">Return to Home</a>
+        <a href="index.html" class="button">Return to Home</a>
     </div>
 
     <!-- Include the footer -->
