move home and courses buttons to the left side of the header

--- a/website/imports/header.html
+++ b/website/imports/header.html
@@ -5,9 +5,11 @@
         <!-- Replace 'path/to/logo.png' with the actual path to your logo -->
         <img src="path/to/logo.png" alt="Logo">
     </div>
-    <nav>
+    <nav class="nav-left">
         <a href="index.html">Home</a>
         <a href="course_content.html">Courses</a>
+    </nav>
+    <nav class="nav-right">
         <!-- Placeholder links for future account system -->
         <a href="#" id="login-button">Login</a>
         <a href="#" id="register-button">Register</a>
