--- a/website/privacy.html
+++ b/website/privacy.html
@@ -118,20 +118,57 @@
     </header>
 
     <div class="container">
-        <h1>Privacy Policy</h1>
-        <p>
-            <!-- Insert your actual Privacy Policy content here -->
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. 
-            Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.
-        </p>
-        <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
-            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-        </p>
-        <p>
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos 
-            qui ratione voluptatem sequi nesciunt.
-        </p>
+        <h1 id="privacy-policy">Privacy Policy</h1>
+<p><strong>Effective Date:</strong> 5/2/2025</p>
+<p>Welcome to <strong>Cybersecure Coaching</strong> . We are committed to protecting your privacy. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our website, which provides AI-generated questions to help users learn cyber security and general technology safety skills.</p>
+<h2 id="1-information-we-collect">1. Information We Collect</h2>
+<p>We may collect the following types of information:</p>
+<ul>
+<li><strong>Personal Information:</strong> If you sign up for an account or subscribe to our services, we may collect your name, email address, and other relevant details.</li>
+<li><strong>Usage Data:</strong> We collect information about your interactions with our website, such as the pages visited, the questions attempted, and your performance on quizzes.</li>
+<li><strong>Device and Technical Data:</strong> We may collect data about the device and browser you use, IP address, and cookies to enhance user experience and improve security.</li>
+</ul>
+<h2 id="2-how-we-use-your-information">2. How We Use Your Information</h2>
+<p>We use the collected information to:</p>
+<ul>
+<li>Provide and improve our AI-driven learning services;</li>
+<li>Customize and personalize the learning experience;</li>
+<li>Ensure the security of our platform;</li>
+<li>Analyze user engagement and improve our offerings;</li>
+<li>Communicate with users regarding updates, new features, and relevant cybersecurity alerts;</li>
+<li>Comply with legal obligations.</li>
+</ul>
+<h2 id="3-cookies-and-tracking-technologies">3. Cookies and Tracking Technologies</h2>
+<p>We use cookies and similar technologies to enhance user experience, track website performance, and analyze traffic. You can adjust your browser settings to refuse cookies, but this may limit some functionalities of the website.</p>
+<h2 id="4-sharing-your-information">4. Sharing Your Information</h2>
+<p>We do not sell or rent your personal information. However, we may share it in the following cases:</p>
+<ul>
+<li>With service providers that assist in website operations (e.g., hosting, analytics);</li>
+<li>If required by law, to comply with legal obligations or protect our rights;</li>
+<li>In case of a merger, sale, or acquisition, where user information may be transferred to a new entity.</li>
+</ul>
+<h2 id="5-data-security">5. Data Security</h2>
+<p>We implement industry-standard security measures to protect your information. However, no system is entirely secure, and we encourage users to take necessary precautions while using online services.</p>
+<h2 id="6-your-rights-and-choices">6. Your Rights and Choices</h2>
+<p>You may have rights regarding your data, including:</p>
+<ul>
+<li>Requesting access to the personal data we hold about you;</li>
+<li>Requesting corrections to inaccurate information;</li>
+<li>Requesting deletion of your data, subject to legal obligations;</li>
+<li>Opting out of non-essential communications.</li>
+</ul>
+<p>To exercise these rights, please contact us at <strong>[Insert Contact Information]</strong>.</p>
+<h2 id="7-third-party-links">7. Third-Party Links</h2>
+<p>Our website may contain links to external sites. We are not responsible for their privacy practices, and we encourage users to review the privacy policies of any third-party sites they visit.</p>
+<h2 id="8-children-s-privacy">8. Children&#39;s Privacy</h2>
+<p>Our website is not intended for children under 13. We do not knowingly collect personal data from children. If we become aware of such collection, we will take steps to delete the data.</p>
+<h2 id="9-changes-to-this-privacy-policy">9. Changes to This Privacy Policy</h2>
+<p>We may update this policy from time to time. Any changes will be posted on this page with an updated effective date. We encourage users to review this policy periodically.</p>
+<h2 id="10-contact-us">10. Contact Us</h2>
+<p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+<hr>
+<p>By using our website, you agree to the terms of this Privacy Policy.</p>
+
     </div>
 
     <footer>
