Refactor course_placeholder.html and loadImports.js to improve component loading and enhance code readability

--- a/website/course_placeholder.html
+++ b/website/course_placeholder.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Literacy Course - Basic Internet Safety</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Digital Literacy Course - Basic Internet Safety</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <!-- Include the header -->
-    <div id="header-placeholder"></div>
+  <!-- Header placeholder -->
+  <div id="header-placeholder"></div>
 
-    <div class="container">
-        <h1>Basic Internet Safety</h1>
-        <p>This course is under development. Stay tuned for more information!</p>
-        <a href="index.html" class="button">Return to Home</a>
-    </div>
+  <div class="container">
+    <h1>Basic Internet Safety</h1>
+    <p>This course is under development. Stay tuned for more information!</p>
+    <a href="index.html" class="button">Return to Home</a>
+  </div>
 
-    <!-- Include the footer -->
-    <div id="footer-placeholder">
-        <footer>
-            <a href="#">Loading...</a>
-        </footer>
-    </div>
+  <!-- Footer placeholder -->
+  <div id="footer-placeholder">
+    <footer>
+      <a href="#">Loading...</a>
+    </footer>
+  </div>
 
-    <!-- Script to load header and footer -->
-    <script src="imports/loadImports.js"></script>
+  <!-- Load header and footer components -->
+  <script src="imports/loadImports.js"></script>
 </body>
 </html>
